# IPC_project

./: .gitignore  README.md
2D_IPC/: .gitignore  CMakeLists.txt  README.md  args.h  barrier_energy.cpp  barrier_energy.h  barrier_energy_test.cpp  broad_phase.cpp  broad_phase.h  broad_phase_test.cpp  bvh_box_leaf_test.cpp  ccd.cpp  ccd.h  chain.cpp  chain.h  example.cpp  example.h  ipc_args.h  ipc_math.h  main.cpp  make_shape.cpp  make_shape.h  mesh.cpp  mesh.h  node_segment_distance.cpp  node_segment_distance.h  ogc_trust_region.cpp  ogc_trust_region.h  parallel_helper.cpp  parallel_helper.h  parallel_helper_test.cpp  physics.cpp  physics.h  rb_inertia.cpp  rb_inertia.h  rb_inertia_test.cpp  restart.cpp  restart.h  rigid_body.cpp  rigid_body.h  (+18 more)
2D_IPC/algebra/: algebra.h
2D_IPC/broad_phase/: broad_phase.h  bvh.cpp  bvh.h
2D_IPC/initial_guess/: affine.cpp  affine.h  ccd.cpp  ccd.h  initial_guess.cpp  initial_guess.h  trivial.cpp  trivial.h
2D_IPC/src/: chain.h  example.cpp  ipc_args.h  ipc_math.h  physics.cpp  simulation.cpp  solver.cpp  solver.h  visualization.cpp  visualization.h
2D_IPC/src/broad_phase/: broad_phase.h  bvh.h
2D_IPC/src/initial_guess/: affine.h  ccd.cpp  initial_guess.cpp  trivial.cpp  trivial.h  trust_region.h
2D_IPC/src/step_filter/: ccd.cpp  ccd.h  step_filter.h  trust_region.cpp  trust_region.h
2D_IPC/tests/: CMakeLists.txt  bvh_box_leaf_test.cpp  rigid_body_ccd_test.cpp
2D_IPC/tools/: bvh_visualize.cpp
3D_IPC/: .gitignore  3D_IPC.cpp  CMakeLists.txt  Corotated32.cpp  Corotated32.h  IPC_math.cpp  IPC_math.h  README.md  Readme.md  args.h  barrier_energy.cpp  barrier_energy.h  barrier_energy_test.cpp  bending_energy.cpp  bending_energy.h  bending_energy_test.cpp  broad_phase.cpp  broad_phase.h  broad_phase_test.cpp  ccd.cpp  ccd.h  ccd_test.cpp  corated_test.cpp  corotated_energy.cpp  corotated_energy.h  corotated_energy_test.cpp  corotated_test.cpp  example.cpp  example.h  generate_golden.cpp  golden_frames.txt  gpu_ccd_test.cpp  gpu_hash_grid_test.cpp  gpu_physics_test.cpp  gpu_solver_test.cpp  initial_guess.cpp  initial_guess.h  initial_guess_test.cpp  ipc_args.h  ipc_math_test.cpp  (+56 more)
3D_IPC/GPU_Elastic/: gpu_elastic.cu  gpu_elastic.h  gpu_elastic_stub.cpp  gpu_hash_grid.cu  gpu_hash_grid.h  gpu_hash_grid_stub.cpp
3D_IPC/GPU_Sim/: gpu_ccd.cu  gpu_ccd.h  gpu_ccd_stub.cpp  gpu_mesh.cu  gpu_mesh.h  gpu_mesh_stub.cpp  gpu_physics.cu  gpu_physics.h  gpu_physics_stub.cpp  gpu_solver.cu  gpu_solver.h  gpu_solver_bridge.cpp  gpu_solver_bridge.h  gpu_solver_stub.cpp
3D_IPC/algebra/: algebra.h
3D_IPC/tex/: .gitignore  README.md  build.sh  main.tex  refs.bib  supplementary.tex
3D_IPC/tgsl_ref/: Definitions.h  MatricesAndVectors.h  RigidBody.cpp  RigidBody.h  RigidBodyConstraints.h
3D_IPC/tools/: bake_cloth3d_body.py  decimate_obj.py
falling_square/: falling_square  falling_square.cpp  test_falling_square  test_falling_square.cpp  test_gradient_square  test_gradient_square.cpp
particle_to_segment/: collision_test1  collision_test1.cpp
segment_to_segment/: collision_test2.cpp
spring_test/: .gitignore  2d_ccd_test_full.cpp  AABB_ccd_test.cpp  affine_ODE.cpp  affine_ode.py  affine_ode2.py  affine_test.cpp  bvh_box_leaf.cpp  bvh_box_leaf.h  ccd_test.cpp  energy_test.cpp  node_segment_ccd_test.cpp  node_segment_distance_test.cpp  spring_IP.cpp  spring_IPC.cpp  spring_IPC2.cpp  spring_IPC3.cpp  spring_IPC_CCD.cpp  spring_IPC_CCD_copy.cpp  spring_IPC_CCD_guess.cpp  spring_IPC_CCD_new.cpp  spring_IPC_bvh.cpp  spring_IPC_ccd.cpp  spring_IPC_ccd2.cpp  spring_IPC_hard_constraint.cpp  spring_IPC_real.cpp  spring_IPC_trust_region.cpp  trust_region_test.cpp
spring_test/2D_IPC/: CMakeLists.txt  README.md
spring_test/2D_IPC/src/: args.h  chain.cpp  chain.h  example.cpp  example.h  physics.cpp  physics.h  simulation.cpp  solver.cpp  solver.h  visualization.cpp  visualization.h
spring_test/2D_IPC/src/broad_phase/: broad_phase.h  bvh.cpp  bvh.h
spring_test/2D_IPC/src/initial_guess/: affine.cpp  affine.h  ccd.cpp  ccd.h  initial_guess.h  trivial.cpp  trivial.h  trust_region.cpp  trust_region.h
spring_test/2D_IPC/src/step_filter/: ccd.cpp  ccd.h
spring_test2/: energy_test.cpp  spring_IPC_ccd.cpp
square_in_ball/: square_in_ball  square_in_ball.cpp
